--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   get_storage: ^2.1.1
   path_provider: ^2.1.5
   intl: ^0.20.2
-  flutter_local_notifications: ^19.1.0
+  awesome_notifications: ^0.10.1
   timezone: ^0.10.0
   permission_handler: ^12.0.0+1
+  uuid: ^4.5.1
 
 
 dev_dependencies:
